@@ -2,7 +2,7 @@ Package: spHelper
 Type: Package
 Title: Convenience Functions Mainly for Spectroscopy
 Description: Various convenience functions for spectroscopy, etc.
-Version: 0.1.062
+Version: 0.1.063
 Date: 2016-03-13
 Encoding: UTF-8
 Author: Vilmantas Gegzna, et al.
@@ -34,6 +34,7 @@ Imports:
     graphics,
     alsace,
     ALS,
+    lubridate,
     simsalapar
 Suggests:
     knitr,
