@@ -16,7 +16,6 @@ export(doALS2)
 export(expr2text)
 export(fCap)
 export(foldTests)
-export(getReconstructed)
 export(getScores)
 export(getVarValues)
 export(hy2mat)
