@@ -1,13 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/reconstructSp.R
 \name{reconstructSp}
-\alias{getReconstructed}
 \alias{reconstructSp}
 \title{[+] Reconstruct spectra from loadings and scores (i.e. components and amplitudes)}
 \usage{
 reconstructSp(loadings, scores, sp = NULL)
-
-getReconstructed(..., sp)
 }
 \arguments{
 \item{loadings}{Components' spectra (loadings) as either a matrix or a
@@ -20,8 +17,6 @@ getReconstructed(..., sp)
  \code{scores}. If \code{sp} is provided, reconstructed spectra will replace
 other spectroscopic data in \code{sp}. This object will be returned as a
 result of this function.}
-
-\item{...}{(The same parameters as above).}
 }
 \value{
 Reconstruction of the original spectroscopic data matrix, based on
@@ -34,8 +29,8 @@ Reconstruct spectra from loadings and scores (i.e. from
 spectroscopic components and their amplitudes).
 }
 \examples{
-function(Loadings, Scores)
-function(Loadings, Scores, Spectra)
+reconstructSp(Loadings, Scores)
+reconstructSp(Loadings, Scores, Spectra)
 
 }
 \author{
